--- a/sonar-runner.properties
+++ b/sonar-runner.properties
@@ -1,7 +1,7 @@
 #Configure here general information about the environment, such as SonarQube DB details for example
 #No information about specific project should appear here
 
-#----- Default SonarQube server
+#----- Default SonarQube server with port
 #sonar.host.url=http://localhost:9000
 
 #----- PostgreSQL
